# CentriLearn

./: .gitignore  LICENSE  README.md  README_CN.md  main.py  profile.out  profile_optimized.out  pyproject.toml  requirements.txt  test_vectorized_components.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
centrilearn/: __init__.py
centrilearn/algorithms/: __init__.py  base.py  dqn.py  ppo.py
centrilearn/buffer/: __init__.py  replaybuffer.py  rolloutbuffer.py
centrilearn/environments/: __init__.py  base.py  network_dismantling.py  vectorized_env.py
centrilearn/metrics/: __init__.py  base.py  manager.py  network_dismantling_metrics.py
centrilearn/models/: __init__.py
centrilearn/utils/: __init__.py  builder.py  performance.py  registry.py  train.py
configs/network_dismantling/: actor_critic_deepnet.yaml  actor_critic_simplenet.yaml  deepnet_custom.yaml  dqn.yaml  dqn_vectorized.yaml  finder_actor_critic.yaml  finder_deep.yaml  finder_qnet.yaml  ppo.yaml  ppo_vectorized.yaml  qnet_fpnet.yaml  qnet_simplenet.yaml
data/small/: Epa.txt  Kohonen.txt  Lederberg.txt  NetScience.txt  SciMet.txt  SmallW.txt  usairports.txt
docs/: api_reference.md  modules_guide.md
examples/: build_model_example.py  build_network_dismantler_example.py  custom_model_example.py  dqn_example.py  ppo_example.py
src/: __init__.py
src/algorithms/: __init__.py  base.py  dqn.py  ppo.py
src/buffer/: replaybuffer.py  rolloutbuffer.py
src/environments/: __init__.py  base.py  network_dismantling.py  vectorized_env.py
src/metrics/: __init__.py  base.py  (+2 more)
tools/: train.py
(+55 files in other folders)
